[package]
name = "ledger-crypto"
description = "Library to integrate with the Ledger Crypto app"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
homepage = "https://github.com/Zondax/ledger-crypto-rs"
repository = "https://github.com/Zondax/ledger-crypto-rs"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "apdu", "crypto"]
edition     = "2018"
autobenches = false

[badges]
circle-ci = { repository = "zondax/ledger-crypto-rs" }

[lib]
name = "ledger_crypto"

[dependencies]
byteorder = "1.3"
lazy_static = "1.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log="0.4.8"

zx-bip44 = { git = "https://github.com/Zondax/blockchain-tools-rs" }
ledger-zondax-generic = { git = "https://github.com/Zondax/ledger-rs", branch="feature/upgradehid" }
ledger-transport = { git = "https://github.com/Zondax/ledger-rs", branch="feature/upgradehid" }
ledger-transport-hid = { git = "https://github.com/Zondax/ledger-rs", branch="feature/upgradehid" }

[dev-dependencies]
futures = "0.3"
matches = "0.1"
hex = "0.4"
serial_test = "0.3"
env_logger = "0.7"
futures-await-test = "0.3"
secp256k1 = "0.17.2"
blake3 = "0.3.4"

[profile.release]
overflow-checks = true
